feat: 新增 button 说明文档

--- a/docs/.vitepress/theme/styles/overrides.css
+++ b/docs/.vitepress/theme/styles/overrides.css
@@ -22,9 +22,13 @@
   background-color: rgb(144 147 153 / 80%);
 }
 
-table {
+.vp-doc table {
   display: table;
   width: 100% !important;
+}
+
+.vp-doc table tr:hover {
+  background-color: transparent !important;
 }
 
 .custom-block.tip .custom-block-title {
